--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <title>Todo App</title>
 </head>
 <body>
-  <div class="aaa">
+  <header class="aaa">
     <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
+  </header>
+  <main class="centered-main-page-element">
     <p id="topsectionforaddingelementtolist">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <section class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
         <button>Add</button>
-      </div>
+      </section>
     </p>
     <h3>Todo</h3>
     <ul id="incompletetasks">
@@ -51,7 +51,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
