--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Todo App</title>
 </head>
 <body>
-  <header class="aaa">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="header__more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <p id="topsectionforaddingelementtolist">
+  <main class="main">
+    <p>
       <label for="new-task">Add Item</label>
       <section class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
@@ -19,7 +19,7 @@
       </section>
     </p>
     <h3>Todo</h3>
-    <ul id="incompletetasks">
+    <ul id="incomplete-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -29,7 +29,7 @@
           <img src="./remove.svg" alt="remove-button">
         </button>
       </li>
-      <li class="editmode">
+      <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
